--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "repository": "",
   "author": "Ivar & Rete",
   "dependencies": {
-    "async": "~0.2.8",
-    "express": "^4.8.0",
-    "socket.io": "~0.9.14",
-    "MD5": "~1.2.1",
-    "body-parser": "~1.12.0",
-    "mysql": "~2.5.5"
+    "express": "4.14.0",
+    "md5": "2.1.0",
+    "body-parser": "1.15.2",
+    "mysql": "2.11.1"
   }
 }
